--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,26 @@
 import React from "react";
+import Timeline from "../Timeline/timeline";
 
-export default function TimelineApprovalsPopover({ data = [] }) {
+
+export default function TimelineApprovalsModal({ open, onClose, data }) {
+  if (!open) return null;
+  // CSS de modal pode ser adaptado ou trocar por popover da lib que preferir
+
   return (
-    <div className="bg-white shadow-lg rounded-lg p-4 min-w-[300px]">
-      <div className="font-semibold mb-2 text-[#484A55]">Approvals & Restrictions</div>
-      <div className="space-y-2">
-        {data && data.length > 0 ? (
-          data.map((step, i) => (
-            <div key={i} className="border-b pb-2 last:border-b-0">
-              <div className="font-medium">{step.name}</div>
-              <div className="text-xs text-[#636574]">Status: {step.status}</div>
-              {/* Add more info if you want */}
-            </div>
-          ))
-        ) : (
-          <div className="text-sm text-[#636574]">No details.</div>
-        )}
+    <div className="fixed z-50 top-0 left-0 w-full h-full bg-black/30 flex items-center justify-center">
+      <div className="bg-white rounded-lg p-8 min-w-[400px] relative">
+        <button className="absolute top-2 right-2" onClick={onClose}>
+          ✕
+        </button>
+        <div className="mb-4 font-semibold">Approvals and Restrictions</div>
+        <Timeline.Root>
+          {data.map((step, i) => (
+            <Timeline.Step key={step.id || i} status={step.status}>
+              <Timeline.Circle status={step.status} />
+              <Timeline.Text>{step.name}</Timeline.Text>
+            </Timeline.Step>
+          ))}
+        </Timeline.Root>
       </div>
     </div>
   );
