--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,1 @@
-import React from "react";
-import Timeline from "../Timeline/timeline";
-
-export default function TimelineApprovalsModal({ open, onClose, data }) {
-  if (!open) return null;
-
-  // Fecha ao clicar na camada semitransparente OU ao perder o hover
-  const handleOverlayClose = () => onClose();
-  const stopPropagation = (e: React.MouseEvent) => e.stopPropagation();
-
-  return (
-    <div
-      className="fixed inset-0 z-50 flex items-center justify-center bg-black/30"
-      onClick={handleOverlayClose}
-      onMouseLeave={handleOverlayClose} // sai do modal = fecha
-    >
-      <div
-        className="relative bg-white rounded-lg p-8 min-w-[400px]"
-        onClick={stopPropagation}        // evita fechar ao clicar no conteúdo
-        onMouseEnter={stopPropagation}   // mantém aberto enquanto o cursor estiver aqui
-      >
-        <button
-          className="absolute top-2 right-2"
-          onClick={onClose}
-          aria-label="Fechar"
-        >
-          ✕
-        </button>
-
-        <div className="mb-4 font-semibold">Approvals and Restrictions</div>
-
-        <Timeline.Root>
-          {data.map((step, i) => (
-            <Timeline.Step key={step.id || i} status={step.status}>
-              <Timeline.Circle status={step.status} />
-              <Timeline.Text>{step.name}</Timeline.Text>
-            </Timeline.Step>
-          ))}
-        </Timeline.Root>
-      </div>
-    </div>
-  );
-}
-
-
-
-
-
-{/* …dentro do bloco isApprovalsStep … */}
-<>
-  <span
-    style={{ cursor: "pointer" }}
-    onMouseEnter={() => setShowApprovalsModal(true)}
-    onFocus={() => setShowApprovalsModal(true)}   // acessibilidade
-    title="Ver detalhes dos Approvals"
-  >
-    <Timeline.Circle status={statusValue} />
-    <Timeline.Text>{item.name}</Timeline.Text>
-  </span>
-
-  <TimelineApprovalsModal
-    open={showApprovalsModal}
-    onClose={() => setShowApprovalsModal(false)}
-    data={approvalsSteps}
-  />
-</>
+tsx {isApprovalsStep ? ( <> <div className="flex flex-col items-center cursor-pointer" onMouseEnter={() => setShowApprovalsModal(true)} onFocus={() => setShowApprovalsModal(true)} title="Ver detalhes dos Approvals" > <Timeline.Circle status={statusValue} /> <Timeline.Text>{item.name}</Timeline.Text> </div> <TimelineApprovalsModal … /> </> ) : ( <> <Timeline.Circle … /> <Timeline.Text>{item.name}</Timeline.Text> </> )}
