--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-// Dentro do seu Timeline principal (History), para a etapa de Approvals and Restrictions:
-
-<Timeline.Step key={item.key} status={statusValue}>
-  <div className="relative flex flex-col items-center justify-center overflow-visible min-h-[180px] group">
-    {/* Círculo com hover */}
-    <div className="relative inline-block">
-      <Timeline.Circle status={statusValue} />
-      {/* Mostra hover só se for "Approvals and Restrictions" */}import React from "react";
+import React from "react";
 import Timeline from "../Timeline/timeline";
 import Image from "next/image";
 import WrapperIcon from "@/app/assets/svg/Wrapper.svg"; // ajuste o path se precisar
@@ -87,25 +80,3 @@ export default function TimelineApprovalsModal({
     </div>
   );
 }
-
-      {item.name.includes("Approvals and Restrictions") && (
-        <div
-          className="
-            absolute top-full left-1/2 -translate-x-1/2
-            mt-2 w-60 p-2 bg-white rounded shadow-lg z-30
-            opacity-0 group-hover:opacity-100 transition-opacity
-            pointer-events-none
-          "
-        >
-          {/* Aqui põe os detalhes que quiser mostrar no hover */}
-          <div className="text-xs text-gray-700">
-            <div><strong>Step:</strong> {item.name}</div>
-            <div><strong>Status:</strong> {item.status}</div>
-            {/* Adicione outros campos aqui! */}
-          </div>
-        </div>
-      )}
-    </div>
-    <Timeline.Text>{item.name.split(":")[1]?.trim() || item.name}</Timeline.Text>
-  </div>
-</Timeline.Step>
